False warning on solidify modifier with bevelled curves #38638

Closed
opened 2014-02-14 22:59:25 +01:00 by gandalf3 · 6 comments
Member

System Information
Archlinux
Nvidia GTX 460

Blender Version
Broken: 2.69 release (r60991) and 2.69.10 c7ac0ed

Short description of error
False "Faces needed for useful output" warning on solidify modifier when tweaking the bevel of a curve.

Exact steps for others to reproduce the error
Based on curve_solidify_warning.blend

  1. Open attached file
  2. Slide the bevel depth of the curve/torus object to 0 and then back to a value >0
  3. Switch to the modifiers tab. The solidify modifier has a warning about no faces, but there are faces and it's working just fine other than the warning.
**System Information** Archlinux Nvidia GTX 460 **Blender Version** Broken: 2.69 release (r60991) and 2.69.10 c7ac0ed **Short description of error** False "Faces needed for useful output" warning on solidify modifier when tweaking the bevel of a curve. **Exact steps for others to reproduce the error** Based on [curve_solidify_warning.blend](https://archive.blender.org/developer/F77298/curve_solidify_warning.blend) 1. Open attached file 2. Slide the bevel depth of the curve/torus object to 0 and then back to a value >0 3. Switch to the modifiers tab. The solidify modifier has a warning about no faces, but there are faces and it's working just fine other than the warning.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3

This issue was referenced by blender/blender-addons-contrib@56f6bc06d3

This issue was referenced by blender/blender-addons-contrib@56f6bc06d3c322d2f51a88b96c7367bc5dfeaf37

This issue was referenced by 56f6bc06d3

This issue was referenced by 56f6bc06d3c322d2f51a88b96c7367bc5dfeaf37

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 56f6bc06d3.

Closed by commit 56f6bc06d3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38638
No description provided.