Fix T38638: modifiers on curves kept warnings